[gd_scene load_steps=21 format=2]

[ext_resource path="res://addons/quest_editor/default/fonts/Pangolin-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://quest_example/3d/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://quest_example/textures/Chest.png" type="Texture" id=3]
[ext_resource path="res://quest_example/textures/Quest.png" type="Texture" id=4]
[ext_resource path="res://quest_example/3d/Level.gd" type="Script" id=5]
[ext_resource path="res://quest_example/quest_ui/QuestUi.tscn" type="PackedScene" id=6]
[ext_resource path="res://quest_example/inventory_ui/InventoryUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://quest_example/3d/actors/Destination.tscn" type="PackedScene" id=8]
[ext_resource path="res://quest_example/3d/actors/Enemy.tscn" type="PackedScene" id=9]
[ext_resource path="res://quest_example/3d/actors/Girl.tscn" type="PackedScene" id=10]
[ext_resource path="res://quest_example/3d/actors/John.tscn" type="PackedScene" id=11]
[ext_resource path="res://quest_example/3d/actors/Trigger.tscn" type="PackedScene" id=12]
[ext_resource path="res://addons/inventory_editor/InventoryItem3D.gd" type="Script" id=13]
[ext_resource path="res://quest_example/3d/actors/Item.tscn" type="PackedScene" id=14]
[ext_resource path="res://quest_example/3d/Item.gd" type="Script" id=15]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.133333, 0.823529, 0.0745098, 1 )

[sub_resource type="BoxShape" id=3]

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.0194099, 3.9239, 1 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 1 )

[node name="Level" type="Spatial"]
script = ExtResource( 5 )

[node name="Background" type="MeshInstance" parent="."]
transform = Transform( 35, 0, 0, 0, 1, 0, 0, 0, 35, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Ground" type="StaticBody" parent="Background"]

[node name="CollisionShape" type="CollisionShape" parent="Background/Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.15939, 0 )
shape = SubResource( 3 )

[node name="WallXNegative" type="StaticBody" parent="Background"]

[node name="CollisionShape" type="CollisionShape" parent="Background/WallXNegative"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.01813, 1.75066, 0 )
shape = SubResource( 4 )

[node name="WallXPositive" type="StaticBody" parent="Background"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Background/WallXPositive"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.01813, 1.75066, 0 )
shape = SubResource( 4 )

[node name="WallZNegative" type="StaticBody" parent="Background"]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Background/WallZNegative"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.01813, 1.75066, 0 )
shape = SubResource( 4 )

[node name="WallZPositive" type="StaticBody" parent="Background"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Background/WallZPositive"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.01813, 1.75066, 0 )
shape = SubResource( 4 )

[node name="DirectionalLight" type="DirectionalLight" parent="Background"]
transform = Transform( 0.0285714, 0, 0, 0, -1.62921e-07, 1, 0, -0.0285714, -4.65488e-09, 0, 20, 0 )
light_energy = 3.0

[node name="John" parent="." instance=ExtResource( 11 )]
transform = Transform( -0.819152, 0, 0.573576, 0, 1, 0, -0.573576, 0, -0.819152, -24.4423, 0, 26.2755 )

[node name="Girl" parent="." instance=ExtResource( 10 )]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -21.952, 0, 0.112287 )

[node name="Trigger" parent="." instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -25.8115 )

[node name="Destination" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.7346, 0, -19.7024 )

[node name="Enemy" parent="." instance=ExtResource( 9 )]
transform = Transform( -0.814936, 0, -0.579552, 0, 1, 0, 0.579552, 0, -0.814936, 19.5998, 0, 18.2416 )

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, -21, 0, -21 )

[node name="Item" type="Spatial" parent="."]
visible = false
script = ExtResource( 15 )

[node name="Item3D" type="Spatial" parent="Item"]
script = ExtResource( 13 )
item_put = "6550b66f-7b71-4737-b2d1-f70fe102d6b8"
to_inventory = "8e526c15-dfbe-478b-b0c9-a05aa8722cb0"

[node name="InventoryItem_6550b66f-7b71-4737-b2d1-f70fe102d6b8" parent="Item/Item3D" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22.1036, 0, 0 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InventoryButton" type="TextureButton" parent="CanvasLayer"]
margin_right = 70.0
margin_bottom = 70.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" parent="CanvasLayer" instance=ExtResource( 7 )]
visible = false
anchor_left = 0.00103468
anchor_right = 0.00103468
margin_left = 68.9405
margin_top = 70.0
margin_right = 368.94
margin_bottom = 370.0

[node name="QuestButton" type="TextureButton" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -70.0496
margin_top = 0.0496063
margin_right = -0.0495605
margin_bottom = 70.0496
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quest" parent="CanvasLayer" instance=ExtResource( 6 )]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -364.0
margin_top = 70.0
margin_right = -64.0
margin_bottom = 370.0

[node name="Label" type="RichTextLabel" parent="CanvasLayer"]
visible = false
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.5
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true

[node name="Timer" type="Timer" parent="CanvasLayer"]
